--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
         <div class="col">
         <button type="button" class="btn btn-primary">Design</button>
         </div>
+        <div class="row features">
+        <div class="col-4"><h2>Modernise</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi mollitia dolorum doloremque explicabo tempora maxime nihil aspernatur, nostrum expedita cupiditate est beatae autem rem, id fugit, non laboriosam! Magnam.
+         </div>
+        </div>
         
 
 
